--- a/MyBank/MyBank.Transfers.Domain/MyBank.Transfers.Domain.csproj
+++ b/MyBank/MyBank.Transfers.Domain/MyBank.Transfers.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MyBank.Account.Domain\MyBank.Accounts.Domain.csproj" />
     <ProjectReference Include="..\MyBank.Infra.CrossCutting\MyBank.Infra.CrossCutting.csproj" />
     <ProjectReference Include="..\MyBank.Shared.Domain\MyBank.Shared.Domain.csproj" />
   </ItemGroup>
