--- a/MyBank/MyBank.Transfers.Api/MyBank.Transfers.Api.csproj
+++ b/MyBank/MyBank.Transfers.Api/MyBank.Transfers.Api.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyBank.Infra.IoC\MyBank.Infra.IoC.csproj" />
     <ProjectReference Include="..\MyBank.Transfers.Domain\MyBank.Transfers.Domain.csproj" />
     <ProjectReference Include="..\MyBank.Transfers.Infra\MyBank.Transfers.Infra.csproj" />
